# ai_projects

./: .gitignore
ask_my_docs/: pyproject.toml
ask_my_docs/src/ask_my_docs/: main.py
ask_my_docs/src/ask_my_docs/documents/: test.txt
ask_my_docs_llamaIndex/: pyproject.toml
ask_my_docs_llamaIndex/src/ask_my_docs_llamaindex/: main.py
docs/: AI_ENGINEER_ROADMAP.md  LlamaIndex.md  PROJECTS.md  Project 1_Ask My Docs RAG Chatbot.md
docs/Phases/3. Large Language Models (LLMs)/: 3.1.1_Prompt_Engineering.md
phases/phase3/: 1_0_zero_shot_prompting_ollama.py  1_1_zero_shot_prompting_ollama_stream.py  1_2_zero_shot_prompting_ollama_improved_prompt.py  MODEL_COMPARISON.md  pyproject.toml  zero_shot_prompting_langchain.py
