[project]
name = "ask-my-docs-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "llama-index>=0.14.21",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-vector-stores-chroma>=0.5.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
ask-my-docs = "ask_my_docs_llamaindex.main:main"
